--- a/_data/origin/cors.yml
+++ b/_data/origin/cors.yml
@@ -57,3 +57,6 @@ polyfill:
 
 mathjax:
   js: https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-chtml.js
+
+openseadragon:
+  js: https://cdn.jsdelivr.net/npm/openseadragon@4.1.0/build/openseadragon/openseadragon.min.js
