--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ Gemfile.lock
 
 # Jekyll cache
 .jekyll-cache
+.jekyll-metadata
+
 _site
 
 # RubyGems
@@ -16,6 +18,12 @@ package-lock.json
 
 # IDE configurations
 .idea
-.vscode
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/tasks.json
 
 # Misc
+_sass/vendors
+assets/js/dist
